test/visibility/import/enablesUnqualified/useAndImport-useExceptAll2b.good
useAndImport-useExceptAll2b.chpl:22: In function 'main':
useAndImport-useExceptAll2b.chpl:23: error: 'x' undeclared (first use this function)
